# bpplugin

./: .gitignore  CMakeLists.txt  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
